--- a/src/app/pages/auth/components/sign-in/sign-in.component.html
+++ b/src/app/pages/auth/components/sign-in/sign-in.component.html
@@ -4,72 +4,97 @@
     class="bg-surface-50 dark:bg-surface-950 flex items-center justify-center min-h-screen min-w-[100vw] overflow-hidden">
 
     <div class="flex flex-col items-center justify-center">
-        <div style="border-radius: 56px; padding: 0.4rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 100%)">
+        <div
+            style="border-radius: 56px; padding: 0.4rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 100%)">
             <div class="w-full bg-surface-0 dark:bg-surface-900 py-10 px-8 sm:px-6" style="border-radius: 53px">
                 <div class="text-center mb-0">
-                    <img ngSrc="/images/logo-text.png" alt="" width="100" height="100">
+                    @if (!environment.production) {
+                        <h1 class="text-red-500">
+                            {{ environment.APP_SHORT_NAME }}
+                        </h1>
+                    }
+
+                    <img src="images/logo.png" alt="" width="150">
 
                     <div class="text-surface-950 dark:text-surface-0 text-3xl font-medium mb-4">
                         Iniciar Sesión
                     </div>
 
                     <span class="text-muted-color font-medium">
-                        Bienvenido a Planting Future!
+                        Bienvenido a {{ environment.APP_NAME }}
                     </span>
                 </div>
 
                 <form [formGroup]="form" (ngSubmit)="onSubmit()">
                     <div>
-                        <label for="email1" class="block text-surface-900 dark:text-surface-0 text-xl font-medium mb-2">
-                            Email:
+                        <label for="username"
+                               class="block text-surface-900 dark:text-surface-0 text-xl font-medium mb-2">
+                            Número de cédula:
                         </label>
 
                         <input pInputText
-                               id="email1"
+                               pKeyFilter="int"
+                               [maxlength]="10"
+                               id="username"
                                type="text"
-                               placeholder="Email address"
+                               placeholder="Ej. 1702030405"
                                class="w-full md:w-[39rem] mb-4"
-                               formControlName="email" />
+                               formControlName="username" />
                     </div>
 
                     <div>
-                        <label for="password1"
+                        <label for="password"
                                class="block text-surface-900 dark:text-surface-0 font-medium text-xl mb-2">
-                            Password
+                            Contraseña:
                         </label>
 
                         <p-password
-                            id="password1"
+                            id="password"
                             formControlName="password"
-                            placeholder="Password"
+                            placeholder="Ingrese su contraseña"
                             [toggleMask]="true"
                             styleClass="mb-4"
                             [fluid]="true"
                             [feedback]="false" />
                     </div>
 
-                    <div class="flex items-center justify-between mt-2 mb-8 gap-8">
-                        <span
-                            routerLink="/auth/sign-in"
-                            class="font-medium no-underline ml-2 text-left cursor-pointer text-blue-600">
-                            ¿Olvidó su contraseña?
-                        </span>
+<!--                    <p-button-->
+<!--                        data-sitekey="AIzaSyCGUwCcM-LKjRK4rjbBJ06_GLmX2LaYzfg"-->
+<!--                        (onClick)="onSubmit($event)">ca-->
+<!--                    </p-button>-->
 
-                        <span
-                            routerLink="/auth/sign-up"
-                            class="font-medium no-underline mr-2 text-right cursor-pointer text-primary">
-                            Crear Cuenta
-                        </span>
-                    </div>
+<!--                    <p-button (onClick)="executeRecaptcha()"/>-->
 
-                    <p-button label="Iniciar Sesión" styleClass="w-full" (onClick)="onSubmit()" />
+                    <re-captcha
+                        (resolved)="executeRecaptchaVisible($event)"
+                        [siteKey]="environment.RECAPTCHA_SITE_KEY"/>
+
+                    <!--                    <div class="flex items-center justify-between mt-2 mb-8 gap-8">-->
+                    <!--                        <span-->
+                    <!--                            routerLink="/auth/sign-in"-->
+                    <!--                            class="font-medium no-underline ml-2 text-left cursor-pointer text-blue-600">-->
+                    <!--                            ¿Olvidó su contraseña?-->
+                    <!--                        </span>-->
+
+                    <!--                        <span-->
+                    <!--                            routerLink="/auth/sign-up"-->
+                    <!--                            class="font-medium no-underline mr-2 text-right cursor-pointer text-primary">-->
+                    <!--                            Crear Cuenta-->
+                    <!--                        </span>-->
+                    <!--                    </div>-->
+
+                    <p-button label="Iniciar Sesión"
+                              styleClass="w-full"
+                              (onClick)="onSubmit()"
+                              [icon]="PrimeIcons.SIGN_IN"
+                              [disabled]="!isRecaptcha" />
                 </form>
 
-                <p-divider align="center" type="dotted">
-                    <b>O</b>
-                </p-divider>
+                <!--                <p-divider align="center" type="dotted">-->
+                <!--                    <b>O</b>-->
+                <!--                </p-divider>-->
 
-                <app-auth-provider-button />
+                <!--                <app-auth-provider-button />-->
             </div>
         </div>
     </div>
