--- a/src/app/pages/auth/components/sign-in/sign-in.component.html
+++ b/src/app/pages/auth/components/sign-in/sign-in.component.html
@@ -8,7 +8,7 @@
             style="border-radius: 56px; padding: 0.4rem; background: linear-gradient(180deg, var(--primary-color) 10%, rgba(33, 150, 243, 0) 100%)">
             <div class="w-full bg-surface-0 dark:bg-surface-900 py-10 px-8 sm:px-6" style="border-radius: 53px">
                 <div class="text-center mb-0">
-                    @if (!environment.production) {
+                    @if (environment.production) {
                         <h1 class="text-red-500">
                             {{ environment.APP_SHORT_NAME }}
                         </h1>
