--- a/src/app/pages/user/personal-information/personal-information.component.html
+++ b/src/app/pages/user/personal-information/personal-information.component.html
@@ -39,14 +39,6 @@
                     <div class="card flex flex-col gap-4">
                         <div class="font-semibold text-xl">Datos personales</div>
 
-                        <div class="flex items-center">
-                            <p-checkbox inputId="editing" [formControl]="editingControl" [binary]="true" />
-
-                            <label for="editing" class="ml-2">
-                                Click para editar su cuenta (Recuerde que solo puede editar su correo)
-                            </label>
-                        </div>
-
                         <p-divider />
 
                         <!-- email -->
@@ -59,7 +51,7 @@
                                 [required]="correoField">
                             </label>
 
-                            <div class="col-span-12 md:col-span-8">
+                            <div class="col-span-12 md:col-span-7">
                                 <input pInputText type="text" id="correo" formControlName="correo" />
 
                                 <span
@@ -68,6 +60,11 @@
                                     [touched]="correoField.touched"
                                     [dirty]="correoField.dirty">
                     </span>
+                            </div>
+
+                            <div class="col-span-12 md:col-span-1">
+                                <p-button [icon]="PrimeIcons.PENCIL" severity="warn"
+                                          (onClick)="updateVisible=true" />
                             </div>
                         </div>
 
@@ -455,3 +452,53 @@
         </ng-template>
     </p-toolbar>
 }
+
+<p-dialog [(visible)]="updateVisible" [style]="{ width: '450px' }" header="Actualiazción de Correo" [modal]="true">
+    <ng-template #content>
+        <div class="flex flex-col gap-6">
+            <label
+                appLabel
+                for="correo"
+                class="block font-bold mb-3"
+                label="Nuevo correo"
+                [required]="emailControl">
+            </label>
+
+            <input pInputText id="email" class="col-span-12 md:col-span-4 flex items-center"
+                   [formControl]="emailControl" autocomplete="off" autofocus fluid />
+
+            <p-message severity="error" size="large"
+                       appErrorMessage
+                       [errors]="emailControl.errors"
+                       [touched]="emailControl.touched"
+                       [dirty]="emailControl.dirty" />
+
+
+            @if (emailControl.valid) {
+                <p-button label="Solicitar Código" (onClick)="requestTransactionalCode()" [fluid]="true" />
+            }
+
+            @if (transactionalCodeControl?.value === '') {
+                <label
+                    appLabel
+                    for="transactionalCode"
+                    class="block font-bold mb-3"
+                    label="Ingrese el código enviado a su correo"
+                    [required]="transactionalCodeControl">
+                </label>
+
+                <p-inputotp
+                    id="transactionalCode"
+                    [formControl]="transactionalCodeControl"
+                    [length]="6"
+                    [integerOnly]="true" />
+
+                <p-message severity="error" size="large"
+                           appErrorMessage
+                           [errors]="transactionalCodeControl.errors"
+                           [touched]="transactionalCodeControl.touched"
+                           [dirty]="transactionalCodeControl.dirty" />
+            }
+        </div>
+    </ng-template>
+</p-dialog>
