--- a/src/app/pages/user/activity/activity.component.html
+++ b/src/app/pages/user/activity/activity.component.html
@@ -23,12 +23,21 @@
             @if (checked.value) {
                 <p-button
                     type="button"
-                    label="Guardar"
+                    label="Guardar y Continuar"
                     size="large"
                     severity="success"
                     [icon]="PrimeIcons.SAVE"
                     iconPos="right"
                     (onClick)="onSubmit()" />
+            } @else {
+                <p-button
+                    type="button"
+                    label="Continuar"
+                    size="large"
+                    [icon]="PrimeIcons.ARROW_RIGHT"
+                    iconPos="right"
+                    (onClick)="next.emit(null)" />
+
             }
         </ng-template>
     </p-toolbar>
@@ -38,38 +47,6 @@
             <div class="flex flex-col md:flex-row gap-8 mt-6">
                 <div class="w-full">
                     <div class="card flex flex-col gap-4">
-                        <p-message severity="error" size="large">
-                            <ng-template #icon>
-                                <i class="pi pi-info-circle"></i>
-                            </ng-template>
-
-                            <span class="ml-2">Alerta: recuerde que los datos ingresados deberán estar a nombre del beneficiario registrado</span>
-                        </p-message>
-                    </div>
-
-                    @if (!accountChangedField?.value) {
-                        <div class="card flex flex-col gap-4">
-                            <div class="flex items-center">
-                                <p-checkbox inputId="checked" [formControl]="checked" [binary]="true" />
-
-                                <label for="checked" class="ml-2">
-                                    Click para editar su cuenta (Recuerde que solo puede editar una sola vez)
-                                </label>
-                            </div>
-                        </div>
-                    } @else {
-                        <div class="card flex flex-col gap-4">
-                            <p-message severity="warn" size="large">
-                                <ng-template #icon>
-                                    <i class="pi pi-info-circle"></i>
-                                </ng-template>
-
-                                <span class="ml-2">Atención: usted ya realizó el cambio de su cuenta bancaria</span>
-                            </p-message>
-                        </div>
-                    }
-
-                    <div formGroupName="additionalInformation" class="card flex flex-col gap-4">
                         <div class="font-semibold text-xl">Datos cuenta bancaria</div>
 
                         <p-divider />
@@ -78,24 +55,20 @@
                         <div class="grid grid-cols-12 gap-4">
                             <label
                                 appLabel
-                                for="accountType"
+                                for="type"
                                 class="col-span-12 md:col-span-4 flex items-center"
                                 label="Tipo de cuenta"
-                                [required]="accountTypeField">
+                                [required]="typeField">
                             </label>
 
                             <div class="col-span-12 md:col-span-8">
-                                <p-select
-                                id="accountType"
-                                [options]="accountTypes"
-                                formControlName="tipoCuenta"
-                                class="w-full" />
+                                <input pInputText type="text" id="type" formControlName="type" />
 
                                 <p-message
                                     appErrorMessage
-                                    [errors]="accountTypeField?.errors"
-                                    [touched]="accountTypeField?.touched"
-                                    [dirty]="accountTypeField?.dirty"
+                                    [errors]="typeField?.errors"
+                                    [touched]="typeField?.touched"
+                                    [dirty]="typeField?.dirty"
                                     severity="error"
                                     variant="simple"
                                     size="small" />
@@ -106,20 +79,20 @@
                         <div class="grid grid-cols-12 gap-4">
                             <label
                                 appLabel
-                                for="numeroCuenta"
+                                for="number"
                                 class="col-span-12 md:col-span-4 flex items-center"
                                 label="Número de cuenta"
-                                [required]="accountNumberField">
+                                [required]="numberField">
                             </label>
 
                             <div class="col-span-12 md:col-span-8">
-                                <input pInputText type="text" id="numeroCuenta" formControlName="numeroCuenta" />
+                                <input pInputText type="text" id="number" formControlName="number" />
 
                                 <p-message
                                     appErrorMessage
-                                    [errors]="accountNumberField?.errors"
-                                    [touched]="accountNumberField?.touched"
-                                    [dirty]="accountNumberField?.dirty"
+                                    [errors]="numberField?.errors"
+                                    [touched]="numberField?.touched"
+                                    [dirty]="numberField?.dirty"
                                     severity="error"
                                     variant="simple"
                                     size="small" />
@@ -130,20 +103,20 @@
                         <div class="grid grid-cols-12 gap-4">
                             <label
                                 appLabel
-                                for="nombreCorto"
+                                for="shortName"
                                 class="col-span-12 md:col-span-4 flex items-center"
                                 label="Nombre corto"
-                                [required]="accountNameField">
+                                [required]="shortNameField">
                             </label>
 
                             <div class="col-span-12 md:col-span-8">
-                                <input pInputText type="text" id="nombreCorto" formControlName="nombreCorto" />
+                                <input pInputText type="text" id="shortName" formControlName="shortName" />
 
                                 <p-message
                                     appErrorMessage
-                                    [errors]="accountNameField?.errors"
-                                    [touched]="accountNameField?.touched"
-                                    [dirty]="accountNameField?.dirty"
+                                    [errors]="shortNameField?.errors"
+                                    [touched]="shortNameField?.touched"
+                                    [dirty]="shortNameField?.dirty"
                                     severity="error"
                                     variant="simple"
                                     size="small" />
@@ -177,12 +150,21 @@
             @if (checked.value) {
                 <p-button
                     type="button"
-                    label="Guardar"
+                    label="Guardar y Continuar"
                     size="large"
                     severity="success"
                     [icon]="PrimeIcons.SAVE"
                     iconPos="right"
                     (onClick)="onSubmit()" />
+            } @else {
+                <p-button
+                    type="button"
+                    label="Continuar"
+                    size="large"
+                    [icon]="PrimeIcons.ARROW_RIGHT"
+                    iconPos="right"
+                    (onClick)="next.emit(null)" />
+
             }
         </ng-template>
     </p-toolbar>
