--- a/src/app/pages/validation-guide/validation-guide.component.html
+++ b/src/app/pages/validation-guide/validation-guide.component.html
@@ -1,123 +1,163 @@
-<p-stepper [(value)]="activeStep" class="basis-[40rem]">
-    <p-step-list>
-        <p-step [value]="1" class="flex flex-row flex-auto gap-2">
-            <ng-template #content let-activateCallback="activateCallback" let-value="value">
-                <button class="bg-transparent border-0 inline-flex flex-col gap-2" (click)="activateCallback()">
-                    <span
-                        class="rounded-full border-2 w-12 h-12 inline-flex items-center justify-center"
-                        [ngClass]="{
-                            'bg-primary text-primary-contrast border-primary': value <= activeStep,
-                            'border-surface': value > activeStep
-                        }"
-                    >
-                        <i class="pi pi-user"></i>
-                    </span>
-                </button>
-                1: Datos Personales
-            </ng-template>
-        </p-step>
+<div class="card">
+    <p-stepper [value]="1">
+        <p-step-item [value]="step">
+            <p-step>Semana 1</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    Actividad 1:
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium">
+                            <p-fileupload
+                                name="demo[]"
+                                (onUpload)="onUpload($event)"
+                                [multiple]="true" accept="image/*,.pdf"
+                                maxFileSize="1000000"
+                                mode="advanced"
+                                url="https://www.primefaces.org/cdn/api/upload.php">
+                                <ng-template #empty>
+                                    <div>Arrastre y suelte archivos aquí para cargarlos.</div>
+                                </ng-template>
+                                <ng-template #content>
+                                    <ul *ngIf="uploadedFiles.length">
+                                        <li *ngFor="let file of uploadedFiles">{{ file.name }} - {{ file.size }}bytes
+                                        </li>
+                                    </ul>
+                                </ng-template>
+                            </p-fileupload>
+                        </div>
+                    </div>
 
-        <p-step [value]="2" class="flex flex-row flex-auto gap-2">
-            <ng-template #content let-activateCallback="activateCallback" let-value="value">
-                <button class="bg-transparent border-0 inline-flex flex-col gap-2" (click)="activateCallback()">
-                    <span
-                        class="rounded-full border-2 w-12 h-12 inline-flex items-center justify-center"
-                        [ngClass]="{
-                            'bg-primary text-primary-contrast border-primary': value <= activeStep,
-                            'border-surface': value > activeStep
-                        }"
-                    >
-                        <i class="pi pi-money-bill"></i>
-                    </span>
-                </button>
-                2: Datos Bancarios
-            </ng-template>
-        </p-step>
+                    <div class="py-6">
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
 
-        <p-step [value]="3" class="flex flex-row flex-auto gap-2">
-            <ng-template #content let-activateCallback="activateCallback" let-value="value">
-                <button class="bg-transparent border-0 inline-flex flex-col gap-2" (click)="activateCallback()">
-                    <span
-                        class="rounded-full border-2 w-12 h-12 inline-flex items-center justify-center"
-                        [ngClass]="{
-                            'bg-primary text-primary-contrast border-primary': value <= activeStep,
-                            'border-surface': value > activeStep
-                        }"
-                    >
-                        <i class="pi pi-list-check"></i>
-                    </span>
-                </button>
+        <p-step-item [value]="step+1">
+            <p-step>Semana 2</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium"
+                        >
+                            Content II
+                        </div>
+                    </div>
+                    <div class="flex py-6 gap-2">
 
-                3: Actividad
-            </ng-template>
-        </p-step>
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
 
-        <p-step [value]="4" class="flex flex-row flex-auto gap-2">
-            <ng-template #content let-activateCallback="activateCallback" let-value="value">
-                <button class="bg-transparent border-0 inline-flex flex-col gap-2" (click)="activateCallback()">
-                    <span
-                        class="rounded-full border-2 w-12 h-12 inline-flex items-center justify-center"
-                        [ngClass]="{
-                            'bg-primary text-primary-contrast border-primary': value <= activeStep,
-                            'border-surface': value > activeStep
-                        }"
-                    >
-                        <i class="pi pi-id-card"></i>
-                    </span>
-                </button>
+        <p-step-item [value]="step+2">
+            <p-step>Semana 3</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium"
+                        >
+                            Content II
+                        </div>
+                    </div>
+                    <div class="flex py-6 gap-2">
 
-                4: Documentao y Aceptación
-            </ng-template>
-        </p-step>
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
 
-        <p-step [value]="5" class="flex flex-row flex-auto gap-2">
-            <ng-template #content let-activateCallback="activateCallback" let-value="value">
-                <button class="bg-transparent border-0 inline-flex flex-col gap-2" (click)="activateCallback()">
-                    <span
-                        class="rounded-full border-2 w-12 h-12 inline-flex items-center justify-center"
-                        [ngClass]="{
-                            'bg-primary text-primary-contrast border-primary': value <= activeStep,
-                            'border-surface': value > activeStep
-                        }"
-                    >
-                        <i class="pi pi-verified"></i>
-                    </span>
-                </button>
+        <p-step-item [value]="step+3">
+            <p-step>Semana 4</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium"
+                        >
+                            Content II
+                        </div>
+                    </div>
+                    <div class="flex py-6 gap-2">
 
-                5: Inducción y Evaluación
-            </ng-template>
-        </p-step>
-    </p-step-list>
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
 
-    <p-step-panels>
-        <p-step-panel [value]="1">
-            <ng-template #content let-activateCallback="activateCallback">
-                <app-personal-information (next)="activateCallback(2)"/>
-            </ng-template>
-        </p-step-panel>
+        <p-step-item [value]="step+4">
+            <p-step>Semana 5</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium"
+                        >
+                            Content II
+                        </div>
+                    </div>
+                    <div class="flex py-6 gap-2">
 
-        <p-step-panel [value]="2">
-            <ng-template #content let-activateCallback="activateCallback">
-                <app-bank-detail (previous)="activateCallback(1)" (next)="activateCallback(3)"/>
-            </ng-template>
-        </p-step-panel>
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
 
-        <p-step-panel [value]="3">
-            <ng-template #content let-activateCallback="activateCallback">
-                <app-activity (previous)="activateCallback(2)" (next)="activateCallback(4)"/>
-            </ng-template>
-        </p-step-panel>
+        <p-step-item [value]="step+5">
+            <p-step>Semana 6</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium"
+                        >
+                            Content II
+                        </div>
+                    </div>
+                    <div class="flex py-6 gap-2">
 
-        <p-step-panel [value]="4">
-            <ng-template #content let-activateCallback="activateCallback">
-                <app-document (previous)="activateCallback(3)" (next)="activateCallback(5)"/>
-            </ng-template>
-        </p-step-panel>
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
 
-        <p-step-panel [value]="5">
-            <ng-template #content let-activateCallback="activateCallback">
-                <app-evaluation (previous)="activateCallback(4)" (next)="activateCallback(6)"/>
-            </ng-template>
-        </p-step-panel>
-    </p-step-panels>
-</p-stepper>
+        <p-step-item [value]="step+6">
+            <p-step>Semana 7</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium"
+                        >
+                            Content II
+                        </div>
+                    </div>
+                    <div class="flex py-6 gap-2">
+
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
+
+        <p-step-item [value]="step+7">
+            <p-step>Semana 8</p-step>
+            <p-step-panel>
+                <ng-template #content let-activateCallback="activateCallback">
+                    <div class="flex flex-col h-48">
+                        <div
+                            class="border-2 border-dashed border-surface-200 dark:border-surface-700 rounded bg-surface-50 dark:bg-surface-950 flex-auto flex justify-center items-center font-medium"
+                        >
+                            Content II
+                        </div>
+                    </div>
+                    <div class="flex py-6 gap-2">
+
+                    </div>
+                </ng-template>
+            </p-step-panel>
+        </p-step-item>
+    </p-stepper>
+</div>
