--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -1,5 +1,5 @@
 @if (termsConditions) {
-    <p-stepper [(value)]="activeStep" class="basis-[40rem]">
+    <p-stepper [(value)]="activeStep" class="basis-[50rem]">
         <p-step-list>
             <p-step [value]="1" class="flex flex-row flex-auto gap-2">
                 <ng-template #content let-activateCallback="activateCallback" let-value="value">
@@ -20,7 +20,7 @@
 
             <p-step [value]="2" class="flex flex-row flex-auto gap-2">
                 <ng-template #content let-activateCallback="activateCallback" let-value="value">
-                    <button class="bg-transparent border-0 inline-flex flex-col gap-2">
+                    <button class="bg-transparent border-0 inline-flex flex-col gap-2" (click)="activateCallback()">
                     <span
                         class="rounded-full border-2 w-12 h-12 inline-flex items-center justify-center"
                         [ngClass]="{
