--- a/src/app/pages/activity/activity.component.html
+++ b/src/app/pages/activity/activity.component.html
@@ -29,7 +29,7 @@
                         <div class="flex flex-col md:flex-row justify-between md:items-center flex-1 gap-6">
                             <div class="flex flex-row md:flex-col justify-between items-start gap-2">
                                 <div>
-                                    <span class="font-medium text-secondary text-sm">{{ item.name }}</span>
+                                    <span class="font-medium text-secondary text-sm"><h4>{{ item.name }}</h4></span>
                                     <div
                                         class="text-lg font-medium text-surface-900 dark:text-surface-0 mt-2">{{ item.description }}
                                     </div>
