--- a/src/app/pages/auth/components/sign-in/sign-in.component.html
+++ b/src/app/pages/auth/components/sign-in/sign-in.component.html
@@ -74,6 +74,7 @@
                                 optionLabel="name"
                                 class="w-full md:w-56 mr-2" />
 
+                            {{dayField.value}}
                             <p-select
                                 id="day"
                                 [options]="days"
