--- a/src/app/pages/user/personal-information/personal-information.component.html
+++ b/src/app/pages/user/personal-information/personal-information.component.html
@@ -51,7 +51,7 @@
                                 [required]="correoField">
                             </label>
 
-                            <div class="col-span-12 md:col-span-7">
+                            <div class="col-span-12 md:col-span-8">
                                 <input pInputText type="text" id="correo" formControlName="correo" class="mb-2" />
 
                                 <p-message severity="error" size="large"
@@ -68,13 +68,13 @@
                                 }
                             </div>
 
-                            <div class="col-span-12 md:col-span-1">
-                                <p-button
-                                    [icon]="PrimeIcons.PENCIL"
-                                    severity="warn"
-                                    pTooltip="Actualizar correo"
-                                    (onClick)="updateVisible=true" />
-                            </div>
+                            <!--                            <div class="col-span-12 md:col-span-1">-->
+                            <!--                                <p-button-->
+                            <!--                                    [icon]="PrimeIcons.PENCIL"-->
+                            <!--                                    severity="warn"-->
+                            <!--                                    pTooltip="Actualizar correo"-->
+                            <!--                                    (onClick)="updateVisible=true" />-->
+                            <!--                            </div>-->
                         </div>
 
                         <!-- identification -->
