--- a/src/app/pages/internal-state/internal-state.component.html
+++ b/src/app/pages/internal-state/internal-state.component.html
@@ -1,12 +1,28 @@
-<div class="card flex flex-col gap-6 w-full">
-    <div class="grid grid-cols-1 md:grid-cols-12 gap-6">
-        <div class="md:col-span-3 flex flex-col gap-2">
-            <label>Número de cédula:</label>
+<p-fluid>
+    <div class="card flex flex-col gap-6 w-full">
+        <div class="grid grid-cols-1 md:grid-cols-12 gap-6">
+            <div class="md:col-span-5 flex flex-col gap-2">
+                <label>Ingrese el número de cédula del beneficiario:</label>
 
-            <input type="text" pInputText [formControl]="identification">
+                <p-autocomplete [formControl]="identification"
+                                [suggestions]="userStates"
+                                (completeMethod)="findStatesByCedula($event)"
+                                field="nombres">
+                    <ng-template let-selectedItem #selectedItem>
+                        asdasd
+                    </ng-template>
+
+                    <ng-template let-item #item>
+                        <div class="flex items-center gap-2">
+                            <div>{{ item.cedula }} - {{ item.nombres }}</div>
+                        </div>
+                    </ng-template>
+                </p-autocomplete>
+
+            </div>
         </div>
     </div>
-</div>
+</p-fluid>
 
 @if (userState) {
     <div class="card flex flex-col gap-6 w-full">
